# Proiect-BD

infrastructure/: Dockerfile  Nginx.Dockerfile  Oracle.Dockerfile  Python.Dockerfile  React.Dockerfile  dbinit.sql  docker-compose.yml  init_db.sh  nginx.conf  setup.sql
python_api/: .env  README.md  app.py  connection.py  pyproject.toml
python_api/routes/: queries.py  tables.py  views.py
python_api/services/: helper.py
react-frontend/: package-lock.json  package.json
react-frontend/src/app/: page.js
react-frontend/src/app/LMD-Tables/: page.js
react-frontend/src/app/api-results/: page.js
react-frontend/src/app/cereri/: page.js
react-frontend/src/app/config/: config.js
react-frontend/src/app/menu/: TopMenu.css  TopMenu.js
react-frontend/src/app/views/: page.js
