[tool.poetry]
name = "Proiect"
version = "0.1.0"
description = ""
authors = ["Duta-Sebastian <sebiduta2004@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
cx-oracle = "^8.3.0"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"